--- a/modules/ext.createredirect.css
+++ b/modules/ext.createredirect.css
@@ -1,3 +1,8 @@
-.createredirect-multiline {
-	margin-left: 5px;
+.createredirect-cloner ul {
+	list-style: none;
+	margin: 0;
+}
+
+.createredirect-cloner .createredirect-delete {
+	display: none;
 }
